--- a/src/main/resources/templates/task/add.html
+++ b/src/main/resources/templates/task/add.html
@@ -35,6 +35,7 @@
        }
        .progress-bar-bg {
            background-color: #334155;
+           display:none
        }
        .progress-bar {
            background-color: #3B82F6;
