--- a/src/main/resources/templates/generatedForms/corporateDocumentRiskForm.html
+++ b/src/main/resources/templates/generatedForms/corporateDocumentRiskForm.html
@@ -1,5 +1,6 @@
 <form id="formContainer" th:action="@{http://localhost:9001/tasks/complete}" th:object="${formData}" method="post" hx-post="http://localhost:9001/tasks/complete" hx-target="#formContainer" hx-swap="outerHTML" hx-on:htmx:before-request="this.querySelector('button[type=submit]').disabled = true; this.querySelector('button[type=submit]').innerHTML = 'Processing...'">
-<div class="max-w-6xl mx-auto">
+  <input type="hidden" th:value="${id}" id="id" name="id">
+  <div class="max-w-6xl mx-auto">
   <!-- Page Header -->
   <div class="mb-6 md:mb-8">
     <div class="flex flex-col md:flex-row md:items-center md:justify-between">
