--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -250,6 +250,10 @@
 <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
 <script src="https://unpkg.com/hyperscript.org@0.9.14/dist/_hyperscript.min.js"></script>
 <script defer src="//unpkg.com/alpinejs"></script>
+<script src="https://cdn.jsdelivr.net/npm/docx@8.0.0/build/index.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 
 <!-- Custom JS -->
 <script th:src="@{/js/app.js}"></script>
