--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -87,7 +87,7 @@
     <div>
         <div class="flex items-center mb-10 space-x-2">
             <img src="/images/justjavaLogo.svg" class="w-8 h-8">
-            <h1 class="text-2xl font-bold text-white mt-1 brand-title">JustJava</h1>
+            <h1 class="text-2xl font-bold text-white mt-1 brand-title">TheSoftwareEngineers</h1>
         </div>
         <nav class="space-y-4">
             <a class="flex items-center px-4 py-3 text-gray-700 hover:bg-gray-100 rounded-lg"
