--- a/src/main/resources/templates/process/form-fragment.html
+++ b/src/main/resources/templates/process/form-fragment.html
@@ -18,14 +18,8 @@
            border-radius: 0.75rem;
        }
        .form-input {
-           background-color: #334155;
-           border-color: #475569;
-           color: #E2E8F0;
-       }
-       .form-input:focus {
-           outline: none;
-           border-color: #38BDF8;
-           box-shadow: 0 0 0 2px #0F172A, 0 0 0 4px #38BDF8;
+           background-color: white;
+           color: black;
        }
        .btn-primary {
            background-color: #3B82F6;
