--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -10,7 +10,7 @@
             <a style="text-decoration:none" th:href="@{/processes/newProcess/softwareEngineeringProcess}">
             <button class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 md:py-3 md:px-6 rounded-lg flex items-center w-full md:w-auto justify-center dashboard-start-process-btn">
                 <span class="material-icons mr-2">add</span>
-                Start New Case
+                Start New Project
             </button>
             </a>
         </div>
